# MRC_Agent

./: .dockerignore  .gitignore  Dockerfile  README.md  README_DOCKER.md  activate.txt  docker-compose.yml  pyproject.toml  pyproject.toml.bak  requirements.txt  requirements_cu130.txt  requirements_old.txt  test.py
app/api/: Pydantic_module.py  img_tools.py  main.py  pipeline.py  settings.py
app/webui/: app.py  openai_env.py  openai_function.py  tools.py
