[tool.poetry]
name = "mrc-agent"
version = "0.1.0"
description = "mrcagent"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.118.2"
uvicorn = "^0.37.0"
torch = "^2.8.0"
diffusers = "^0.35.1"
transformers = "^4.57.0"
streamlit = "^1.50.0"
openai = "^2.3.0"
dotenv = "^0.9.9"
peft = "^0.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
